# Whatsapp_AI

./: Dockerfile  README.md  app.db  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  schema.py
app/domain/: message_service.py
app/domain/agents/: base.py  demo_agent.py  routing.py  task.py  utils.py
app/domain/tools/: add.py  base.py  query.py  report_tool.py
app/infrastructure/: llm.py
app/persistance/: db.py  mock_data.py  models.py
