[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.46.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.8",
    "firebase-admin>=6.6.0",
    "gcloud>=0.18.3",
    "jupyter>=1.1.1",
    "langchain>=0.3.19",
    "langfuse>=2.59.3",
    "llama-index>=0.12.19",
    "openai>=1.63.2",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.10",
    "pycryptodome>=3.21.0",
    "pycryptodomex>=3.21.0",
    "pydantic-settings>=2.8.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "retry>=0.9.2",
    "sqlmodel>=0.0.22",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
]
